--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "airbnb/base"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -15,7 +15,7 @@
   "plugins": ["react"],
   "rules": {
     "indent": ["error", 4],
-    "linebreak-style": ["error", "windows"],
+    // "linebreak-style": ["error", "windows"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"]
   }
