--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --open",
     "build": "npm run clear -s && webpack --progress",
-    "clear": "del-cli dist"
+    "clear": "del-cli dist",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix"
   },
   "author": "Igor Savelyev",
   "license": "ISC",
@@ -22,7 +24,10 @@
     "cssnano": "^4.1.10",
     "del-cli": "^3.0.1",
     "eslint": "^7.13.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
@@ -30,6 +35,7 @@
     "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^1.3.1",
     "postcss-loader": "^4.1.0",
+    "prettier": "^2.2.1",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
