--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "stylelint": "^13.7.2",
+    "stylelint-declaration-block-no-ignored-properties": "^2.3.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0",
     "webpack": "4.41.2",
     "webpack-bundle-analyzer": "4.4.0",
     "webpack-cli": "3.3.9",
