--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ReactNotes",
+  "name": "y",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --inline",
-    "build": "npm run clear -s && webpack --progress",
+    "build": "yarn clear -s && webpack --progress",
     "clear": "del-cli dist",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix"
@@ -22,7 +22,6 @@
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.3.0",
     "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
     "del-cli": "^3.0.1",
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -35,6 +34,7 @@
     "html-webpack-plugin": "^4.5.0",
     "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^1.3.1",
+    "postcss": "^8.2.8",
     "postcss-loader": "^4.1.0",
     "prettier": "^2.2.1",
     "sass": "^1.29.0",
