--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,24 +5,29 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "airbnb/base", "prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "airbnb/base",
+    "prettier"
+  ],
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaFeatures": {
-      "jsx": true
+      "jsx": true,
+      "experimentalObjectRestSpread": true
     },
     "ecmaVersion": 12
   },
   "plugins": ["react", "prettier"],
   "rules": {
-    "jsx-quotes": [
-      1,
-      "prefer-double"
-    ],
+    "jsx-quotes": [1, "prefer-double"],
     "indent": ["error", 2],
     // "linebreak-style": ["error", "windows"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
     "prefer-destructuring": "off",
-    "class-methods-use-this": "off"
+    // "class-methods-use-this": "off",
+    "arrow-body-style": ["off", "as-needed"]
   }
 }
