finaly update webpack from 4 to 5

--- a/package.json
+++ b/package.json
@@ -1,65 +1,66 @@
 {
-  "name": "y",
-  "version": "1.0.0",
-  "description": "",
+  "name": "react-webpack-starter",
+  "version": "2.0.0",
+  "description": "Webpack5 starter",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline",
-    "build": "yarn del -s && webpack --progress",
-    "del": "del-cli dist",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix"
+    "dev": "webpack serve --progress --config ./webpack.dev.js",
+    "bld": "yarn del -s && webpack --progress --config ./webpack.prod.js",
+    "del": "del-cli dist"
   },
-  "author": "Igor Savelyev",
-  "license": "ISC",
+  "repository": "https://github.com/cloudy1gor",
+  "private": false,
+  "author": "Savelyev Igor",
+  "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.13.1",
+    "@babel/core": "^7.13.10",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/preset-env": "^7.13.5",
+    "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
-    "autoprefixer": "^10.0.2",
+    "@svgr/webpack": "^5.5.0",
+    "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^6.3.2",
-    "css-loader": "^5.0.1",
+    "copy-webpack-plugin": "^8.1.0",
+    "css-loader": "^5.2.0",
     "css-minimizer-webpack-plugin": "^1.3.0",
     "css-mqpacker": "^7.0.0",
     "del-cli": "^3.0.1",
-    "eslint": "^7.13.0",
+    "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.23.1",
     "file-loader": "^6.2.0",
-    "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.1",
     "image-webpack-loader": "^7.0.1",
-    "mini-css-extract-plugin": "^1.3.1",
+    "mini-css-extract-plugin": "^1.3.9",
     "postcss": "^8.2.8",
-    "postcss-loader": "^4.1.0",
+    "postcss-loader": "^5.2.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
-    "sass": "^1.29.0",
-    "sass-loader": "^10.1.0",
-    "stylelint": "^13.7.2",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "stylelint": "^13.12.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.3.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.18.0",
+    "stylelint-scss": "^3.19.0",
     "svg-sprite-loader": "^6.0.2",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "4.41.2",
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.28.0",
     "webpack-bundle-analyzer": "4.4.0",
-    "webpack-cli": "3.3.9",
-    "webpack-dev-server": "3.8.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-notifier": "^1.13.0",
     "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
     "faker": "^5.4.0",
     "normalize.css": "^8.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  },
-  "repository": "https://github.com/cloudy1gor/ReactNotes.git",
-  "private": false
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
