--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "react-webpack-starter",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Webpack5 starter",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --progress --config ./webpack.dev.js",
-    "bld": "yarn del -s && webpack --progress --config ./webpack.prod.js",
+    "dev": "webpack serve --mode=development --env=development --progress",
+    "bld": "yarn del -s && webpack --mode=production --env=production",
     "del": "del-cli dist"
   },
   "repository": "https://github.com/cloudy1gor",
-  "private": false,
+  "private": true,
   "author": "Savelyev Igor",
   "license": "MIT",
   "devDependencies": {
@@ -62,5 +62,17 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
