--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,30 @@
 {
   "env": {
     "browser": true,
-    "commonjs": true,
-    "es2021": true,
+    // "commonjs": true,
+    // "es2021": true,
     "node": true
   },
   "extends": [
-    "eslint:recommended",
     "plugin:react/recommended",
-    "airbnb/base",
-    "prettier"
+    "prettier/@typescript-eslint",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
   ],
-  "parser": "babel-eslint",
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true,
       "experimentalObjectRestSpread": true
     },
-    "ecmaVersion": 12
+    "ecmaVersion": 12,
+    "sourceType": "module",
+    "project": "./tsconfig.json"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   },
   "plugins": ["react", "prettier"],
   "rules": {
@@ -30,6 +37,7 @@
     "prefer-destructuring": "off",
     "react/prop-types": 0,
     "class-methods-use-this": "off",
-    "arrow-body-style": ["off", "as-needed"]
+    "arrow-body-style": ["off", "as-needed"],
+    "no-console": "off"
   }
 }
