--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "del": "del-cli dist"
   },
   "repository": "https://github.com/cloudy1gor",
-  "private": true,
+  "private": false,
   "author": "Savelyev Igor",
   "license": "MIT",
   "devDependencies": {
@@ -17,6 +17,13 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-react": "^7.12.13",
     "@svgr/webpack": "^5.5.0",
+    "@types/node": "^15.0.1",
+    "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
+    "@types/webpack": "^4.41.0",
+    "@types/webpack-env": "^1.15.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -26,7 +33,6 @@
     "css-mqpacker": "^7.0.0",
     "del-cli": "^3.0.1",
     "eslint": "^7.22.0",
-    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
@@ -40,6 +46,7 @@
     "postcss-loader": "^5.2.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
+    "react-hot-loader": "^4.13.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
@@ -49,6 +56,8 @@
     "stylelint-scss": "^3.19.0",
     "svg-sprite-loader": "^6.0.2",
     "terser-webpack-plugin": "^5.1.1",
+    "ts-loader": "^9.1.1",
+    "typescript": "^4.2.4",
     "webpack": "^5.28.0",
     "webpack-bundle-analyzer": "4.4.0",
     "webpack-cli": "^4.5.0",
